2004-02-27  Eric Blake  <ebb9@byu.net>

	* src/ast.h (AstImportDeclaration::static_token_opt): New field.
	* src/ast.cpp (AstImportDeclaration::Clone, Print): Support it.
	* src/unparse.cpp (AstImportDeclaration::Unparse): Ditto.
	* src/decl.cpp (ProcessImports): Note that static imports are not
	supported yet.
	* src/error.h (STATIC_IMPORT_UNSUPPORTED): New error.
	* src/error.cpp: Ditto.
	* src/java.g (ImportDeclaration): Parse static imports, from JSR
	201.
	* src/javaact.cpp: Regenerate.
	* src/javaact.h: Ditto.
	* src/javadcl.h: Ditto.
	* src/javadef.h: Ditto.
	* src/javasym.h: Ditto.

2004-02-27  Eric Blake  <ebb9@byu.net>

	* src/option.cpp (SaveCurrentDirectoryOnDisk, nocleanup): Fix
	mingw build.
	* src/symbol.cpp (ReadDirectory): Ditto.
	* src/system.cpp (ProcessExtDirs): Ditto.

2004-02-26  Eric Blake  <ebb9@byu.net>

	* src/ast.h (AstFormalParameter::ellipsis_token_opt): New field.
	* src/ast.cpp (AstFormalParameter::Clone, Print): Support it.
	* src/unparse.cpp (AstFormalParameter::Unparse): Ditto.
	* src/body.cpp (ProcessForeachStatement, ProcessTryStatement):
	Ditto.
	* src/decl.cpp (ProcessFormalParameters): Note that varargs are
	not supported yet.
	* src/error.h (VARARGS_UNSUPPORTED): New error.
	* src/error.cpp: Ditto.
	* src/parser.h: Forward declare AstFormalParameter.
	* src/java.g (FormalParameter, FormalParameterList),
	(LocalVariableDeclaration): Parse varargs, from JSR 201.
	* src/javaact.cpp: Regenerate.
	* src/javaact.h: Ditto.
	* src/javadcl.h: Ditto.
	* src/javadef.h: Ditto.
	* src/javasym.h: Ditto.

2004-02-26  Eric Blake  <ebb9@byu.net>

	* src/expr.cpp (ProcessPLUS): Remove bad assertion ('true +
	false', while illegal, can reach this point).

2004-02-26  Eric Blake  <ebb9@byu.net>

	* AUTHORS: Give credit where due.
	* src/bytecode.cpp (EmitAssignmentExpression),
	(EmitBinaryExpression, ConcatenateString, EmitStringAppendMethod):
	Use faster StringBuilder (added in 1.5) when available.