@@ -305,6 +305,7 @@ multiple modifiers;
 an implied modifier;
 \fBserial\fP, which warns about serializable classes without
 serialVersionUID fields;
+\fBshadow\fP, which warns about shadowing and hiding of fields;
 \fBswitchcheck\fP, which
 warns about fallthrough between cases of switch statements;
 \fBnaming-convention\fP, which warns about names that violate Java
