@@ -2024,6 +2024,9 @@ void Semantic::ProcessFieldDeclaration(AstFieldDeclaration* field_declaration)
         }
         else
         {
+            WarnOfAccessibleFieldWithName(SemanticError::HIDDEN_FIELD,
+                                          name, name_symbol);
+
             VariableSymbol* variable =
                 this_type -> InsertVariableSymbol(name_symbol);
             unsigned dims =
